refactored swagger
