# repositories/voters-frontend/controller/participant-handler.go
@@ -28,11 +28,11 @@ func (controller *FrontendController) IndexHandler(responseWriter http.ResponseW
 
 // @Summary Get Participants
 // @Description Responds with the list of participants
-// @Tags participants
+// @Tags api
 // @Accept json
 // @Produce json
 // @Success 200 {object} []domain.Participant
-// @Router /participants [get]
+// @Router /api/participants [get]
 func (controller *FrontendController) GetParticipantsHandler(responseWriter http.ResponseWriter, request *http.Request) {
 	if request.Method != http.MethodGet {
 		http.Error(responseWriter, "Method Not Allowed", http.StatusMethodNotAllowed)
